--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1606,3 +1606,24 @@ booktitle = {Archiv. Math. Logik}
   booktitle={Principles of Programming Languages (POPL)},
   year={2019}
 }
+
+@inproceedings{cook1990object,
+  title={Object-oriented programming versus abstract data types},
+  author={Cook, William R},
+  booktitle={Workshop/School/Symposium of the REX Project (Research and Education in Concurrent Systems)},
+  year={1990}
+}
+
+@inproceedings{krishnamurthi1998synthesizing,
+  title={Synthesizing object-oriented and functional design to promote re-use},
+  author={Krishnamurthi, Shriram and Felleisen, Matthias and Friedman, Daniel P},
+  booktitle={European Conference on Object-Oriented Programming},
+  year={1998},
+}
+
+@inproceedings{bruce1998statically,
+  title={A statically safe alternative to virtual types},
+  author={Bruce, Kim B and Odersky, Martin and Wadler, Philip},
+  booktitle={European Conference on Object-Oriented Programming},
+  year={1998},
+}
