--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -536,9 +536,9 @@ work and finally \cref{chap:conclusion} concludes.
 
 This thesis is largely based on two
 publications~\citep{bi_et_al:LIPIcs:2018:9214, bi_et_al:LIPIcs:2018:9227} by the
-author and one draft~\citep{xuanbiesop}, currently under review as of writing.
-In comparison to the original publications, this thesis contains a more in-depth
-and consistent treatment of disjoint intersection types.
+author and one draft~\citep{xuanbiesop}, currently under review as of this writing.
+In comparison to the original publications, this thesis contains a
+more in-depth and consistent treatment of disjoint intersection types.
 
 \begin{description}
 \item[\cref{chap:nested,chap:coherence:simple}:] Xuan Bi, Bruno C. d. S.
