--- a/acknowledgment.tex
+++ b/acknowledgment.tex
@@ -1,17 +1,41 @@
 
-(To be filled in with more personal details...)
+First and foremost, I would like to thank my advisor Dr. Bruno C. d. S. Oliveira
+for his continued support and mentorship throughout my studies. It is my honor
+to be one of his first disciples. Back in 2014 when I was in my final year at
+ZJU, I wasn't sure if I wanted to pursue a PhD, let alone a PhD in Programming
+Languages! My fellow classmates were all considering applying for PhD in AI,
+computer vision, etc; there were no courses on the theories of programming
+languages in the computer science curriculum in most (if not all) universities
+in Mainland China. My first encounter with this field was due to a Coursera
+course I happened to enroll in. Immediately I got fascinated and wanted to dig
+more. Looking back, it was such a great timing that Bruno just landed his
+faculty position as a assistant professor at HKU, and that I just finished my
+undergraduate studies. Our initial conversation went very well, and shortly I
+became his first PhD student. For the first few months, I was quite ``on the
+right track''. I recall a conversation with my colleague (Haoyuan, is that you?)
+that Bruno referred me as the ``push model'' because I always brought lots of
+questions in our weekly meetings and pushed him to give me more tasks. It was
+not long before I lost myself, had difficulty making any progress, and that the
+weekly meetings with Bruno soon became nightmares to me. Bruno, thank you for
+not giving me up, encouraging me to keep reading more papers, keep trying
+different ideas no matter how hopeless they may seem, and especially for not
+reminding me of the possibility that I may not be able to finish PhD on time!
+All in all, I could not wish for a better PhD advisor.
 
-First and foremost, I would like to thank my PhD supervisor Dr. Bruno C. d. S.
-Oliveira for his continued support and mentorship throughout my studies. I would
-also like to thank my co-supervisor Prof. T.H. Tse for his valuable suggestions
-and guidelines. He helped revise my papers and this thesis, continuously nudging
-me to make my writing clearer. His feedback is nothing short of inspiring, which
-I greatly enjoyed. Secondly, I would like to express my gratitude to Prof. Tom
-Schrijvers from KU Leuven. I enjoyed very much our collaboration on a topic of
-mutual interest, which led to one of the key publications for this PhD
-dissertation. I learned a lot from you! During the years I spent at HKU, I had
-the opportunity to collaborate with a number of excellent fellow researchers, to
-name a few, Tomas Tauber, Zhiyuan Shi, Weixin Zhang, Huang Li, Yanpeng Yang,
-Ningning Xie, Yanlin Wang, Haoyuan Zhang. Last but not least, I would love to
-thank my family for being extremely supportive throughout my studies. I made it
-through thanks to all of you.
+I am incredibly fortunate to have met Prof. Tom Schrijvers from KU Leuven,
+talked to him about my work and found a topic of mutual interest, which led to
+one of the key publications for this PhD thesis. I learned a lot from you! I
+would also like to thank my co-advisor Prof. T.H. Tse for his valuable
+suggestions and guidelines. He helped revise my papers and this thesis,
+continuously nudging me to make my writing clearer. His feedback is nothing
+short of inspiring, which I greatly enjoyed. During the years I spent at HKU, I
+had the opportunity to collaborate with a number of excellent fellow
+researchers, to name a few (in no particular order): Tomas Tauber, Zhiyuan Shi,
+Weixin Zhang, Huang Li, Yanpeng Yang, Ningning Xie, Yanlin Wang and Haoyuan
+Zhang. Especially my coauthor Ningning Xie, who, during my low days, offered me
+to collaborate on a project of her. This collaboration kept me busy for a period
+of time, occupying the time I would otherwise spend on indulging in the gloomy
+outlook of my research life. Our collaboration is still going on as of this writing.
+
+Last but not least, I would love to thank my family for being extremely
+supportive throughout my studies. I made it through thanks to all of you.
