--- a/acknowledgment.tex
+++ b/acknowledgment.tex
@@ -9,7 +9,7 @@ languages in the computer science curriculum in most (if not all) universities
 in Mainland China. My first encounter with this field was due to a Coursera
 course I happened to enroll in. Immediately I got fascinated and wanted to dig
 more. Looking back, it was such a great timing that Bruno just landed his
-faculty position as a assistant professor at HKU, and that I just finished my
+faculty position as an assistant professor at HKU, and that I just finished my
 undergraduate studies. Our initial conversation went very well, and shortly I
 became his first PhD student. For the first few months, I was quite ``on the
 right track''. I recall a conversation with my colleague (Haoyuan, is that you?)
@@ -33,9 +33,9 @@ had the opportunity to collaborate with a number of excellent fellow
 researchers, to name a few (in no particular order): Tomas Tauber, Zhiyuan Shi,
 Weixin Zhang, Huang Li, Yanpeng Yang, Ningning Xie, Yanlin Wang and Haoyuan
 Zhang. Especially my coauthor Ningning Xie, who, during my low days, offered me
-to collaborate on a project of her. This collaboration kept me busy for a period
-of time, occupying the time I would otherwise spend on indulging in the gloomy
-outlook of my research life. Our collaboration is still going on as of this writing.
+to collaborate on a project of her. This collaboration kept me busy for a while, occupying the time I would otherwise spend on indulging in the gloomy
+outlook of my research life. Our fruitful collaboration is still going on as of
+this writing.
 
 Last but not least, I would love to thank my family for being extremely
 supportive throughout my studies. I made it through thanks to all of you.
