--- a/Sources/Nested.tex
+++ b/Sources/Nested.tex
@@ -30,7 +30,7 @@ multiple inheritance/composition supported by \oname into a more powerful form
 supporting nested composition. The distributivity rule between function types
 and intersections is common in calculi with intersection types aimed at
 capturing the set of all strongly normalizable terms, and was first proposed by
-\citet{Barendregt_1983} (BCD). However the distributivity rule is not common in
+\citet{Barendregt_1983}. However the distributivity rule is not common in
 calculi or languages with intersection types aimed at programming. For example
 the rules employed in languages that support intersection types (such as Scala,
 TypeScript, Flow or Ceylon) lack distributivity rules. Moreover distributivity
