--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1609,7 +1609,7 @@ booktitle = {Archiv. Math. Logik}
 
 @inproceedings{cook1990object,
   title={Object-oriented programming versus abstract data types},
-  author={Cook, William R},
+  author={Cook, William R.},
   booktitle={Workshop/School/Symposium of the REX Project (Research and Education in Concurrent Systems)},
   year={1990}
 }
@@ -1626,4 +1626,11 @@ booktitle = {Archiv. Math. Logik}
   author={Bruce, Kim B and Odersky, Martin and Wadler, Philip},
   booktitle={European Conference on Object-Oriented Programming},
   year={1998},
+}
+
+@phdthesis{cookthesis,
+  title={A Denotational Semantics of Inheritance},
+  author={Cook, William R.},
+  year={1989},
+  school={Brown University}
 }
