--- a/Thesis.tex
+++ b/Thesis.tex
@@ -276,7 +276,7 @@ diploma or other qualifications.
 \tableofcontents
 \listoffigures
 \listoftables
-\listoftheorems[ignoreall, show={theorem,lemma}]
+% \listoftheorems[ignoreall, show={theorem,lemma}]
 
 %%---------------------%%
 \mainmatter
