revise the rest

--- a/Sources/Conclusion.tex
+++ b/Sources/Conclusion.tex
@@ -23,7 +23,7 @@ increasing expressiveness:
   reusable programs. We have also extended the canonicity relation to establish
   coherence property of \fnamee.
 \item \sedel---an object-oriented language design---building on \fnamee,
-  supports, among others, typed first traits. We have illustrated the
+  supports, among others, typed first-class traits. We have illustrated the
   applicability of \sedel with several example uses for first-class traits.
   Furthermore, we have conducted a case study that modularizes programming
   language interpreters. The case study demonstrates that the state-of-art
