--- a/Thesis.tex
+++ b/Thesis.tex
@@ -125,7 +125,7 @@
 
 \title{Disjoint Intersection Types: Theory and Practice}
 \author{\textbf{Xuan Bi}}
-\date{August 2018}
+\date{December 2018}
 
 
 %%----------------------------------------------------------------------------%%
@@ -149,8 +149,8 @@
       {\hbox{}\par}
       \vspace*{\stretch{5}}
       {
-      	\textsl{(Temporary Binding for Examination Purposes)} \\
-      	\vspace*{3cm}
+      	% \textsl{(Temporary Binding for Examination Purposes)} \\
+      	% \vspace*{3cm}
       	{\normalsize
       	A thesis submitted in partial fulfillment of the requirements for \\
         the degree of Doctor of Philosophy \\
