--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1634,3 +1634,12 @@ booktitle = {Archiv. Math. Logik}
   year={1989},
   school={Brown University}
 }
+
+@article{oliveira2006extensible,
+  title={Extensible and modular generics for the masses},
+  author={Oliveira, Bruno C. d. S. and Hinze, Ralf and L{\"o}h, Andres},
+  journal={Trends in Functional Programming},
+  volume={7},
+  pages={199--216},
+  year={2006}
+}
