My Chinese name

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -83,6 +83,9 @@
 
 \renewcommand{\th}{\textsuperscript{\textup{th}}\xspace}
 
+\usepackage{xeCJK}
+\setCJKmainfont{Noto Sans CJK TC}
+
 % \newacronym[description={Principal component analysis}]{PCA}{PCA}{principal component analysis}
 % \newacronym                                            {SNF}{SNF}{Smith normal form}
 % \newacronym[description={Topological data analysis}]   {TDA}{TDA}{topological data analysis}
@@ -144,6 +147,7 @@
       {\large\textit{by}\par}
       \vspace*{1cm}
       {\Large\@author\par}
+      {\Large\textbf{(畢旋)}\par}
       \vspace*{\stretch{5}}
       {{\includegraphics[width=30mm]{figures/hku}} \par}
       {\hbox{}\par}
