Pretty Chinese font

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -84,7 +84,7 @@
 \renewcommand{\th}{\textsuperscript{\textup{th}}\xspace}
 
 \usepackage{xeCJK}
-\setCJKmainfont{Noto Sans CJK TC}
+\setCJKmainfont{喜鹊聚珍体}
 
 % \newacronym[description={Principal component analysis}]{PCA}{PCA}{principal component analysis}
 % \newacronym                                            {SNF}{SNF}{Smith normal form}
@@ -147,7 +147,7 @@
       {\large\textit{by}\par}
       \vspace*{1cm}
       {\Large\@author\par}
-      {\Large\textbf{(畢旋)}\par}
+      {\Large(毕旋)\par}
       \vspace*{\stretch{5}}
       {{\includegraphics[width=30mm]{figures/hku}} \par}
       {\hbox{}\par}
