post-publication update

--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -532,22 +532,22 @@ structure of the technical content in the thesis is divided into three parts:
 \Cref{sec:related} reviews related work, \cref{chap:future} discusses future
 work and \cref{chap:conclusion} concludes.
 
-This thesis is largely based on two
-publications~\citep{bi_et_al:LIPIcs:2018:9214, bi_et_al:LIPIcs:2018:9227} by the
-author and one draft~\citep{xuanbiesop}, currently under review as of this writing.
-In comparison to the original publications, this thesis contains a
-more in-depth and consistent treatment of disjoint intersection types.
-
+This thesis is largely based on three
+publications~\citep{bi_et_al:LIPIcs:2018:9214, bi_et_al:LIPIcs:2018:9227, xuanbiesop} by the
+author, as indicated below.
 \begin{description}
 \item[\cref{chap:nested,chap:coherence:simple}:] Xuan Bi, Bruno C. d. S.
   Oliveira, and Tom Schrijvers. 2018. ``The Essence of Nested Composition''. In
   \emph{European Conference on Object-Oriented Programming (ECOOP)}.
 \item[\cref{chap:fi,chap:coherence:poly}:] Xuan Bi, Ningning Xie, Bruno C. d. S.
-  Oliveira, and Tom Schrijvers. 2019. ``Distributive Disjoint Polymorphism for Compositional Programming''. Submitted to
+  Oliveira, and Tom Schrijvers. 2019. ``Distributive Disjoint Polymorphism for Compositional Programming''. In
   \emph{European Symposium on Programming (ESOP)}.
 \item[\cref{chap:traits,chap:case_study}:] Xuan Bi and Bruno C. d. S. Oliveira.
   2018. ``Typed First-Class Traits''. In \emph{European Conference on Object-Oriented Programming (ECOOP)}.
 \end{description}
+In comparison to the original publications, this thesis contains a
+more in-depth and consistent treatment of disjoint intersection types.
+
 
 \noindent\makebox[\linewidth]{\rule{0.7\textwidth}{0.4pt}}
 
