--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1511,12 +1511,11 @@ booktitle = {Archiv. Math. Logik}
 }
 
 
-@techreport{xuanbiesop,
-  title={Distributive Disjoint Polymorphism for Compositional Programming},
-  author =	{Bi, Xuan and Xie, Ningning and Oliveira, Bruno C. d. S. and Schrijvers, Tom},
+@inproceedings{xuanbiesop,
   year={2019},
-  url = {https://bixuanzju.github.io/files/ESOP2019.pdf},
-  institution={The University of Hong Kong}
+  author =	{Bi, Xuan and Xie, Ningning and Oliveira, Bruno C. d. S. and Schrijvers, Tom},
+  title={Distributive Disjoint Polymorphism for Compositional Programming},
+  booktitle={European Symposium on Programming (ESOP)},
 }
 
 @article{pierce1994bounded,
